--- a/build.gradle
+++ b/build.gradle
@@ -19,17 +19,60 @@ repositories {
 }
 
 dependencies {
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-json')
+    implementation('org.springframework.boot:spring-boot-starter-aop')
+    implementation('org.springframework.boot:spring-boot-starter-webflux')
+    implementation('org.springframework.boot:spring-boot-starter-cache')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('org.springframework.boot:spring-boot-starter-data-couchbase')
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('org.springframework.data:spring-data-envers')
+
+    implementation('org.springframework.boot:spring-boot-starter-data-redis') {
+        exclude group: "io.lettuce", module: "lettuce-core"
+    }
+
+    implementation('redis.clients:jedis')
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+
+    implementation('com.querydsl:querydsl-apt')
+    implementation('com.querydsl:querydsl-jpa')
+
+    compileOnly('org.projectlombok:lombok')
+    testCompileOnly('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
+
+    implementation('com.google.guava:guava:26.0-jre')
+    implementation('com.google.code.findbugs:jsr305:3.0.2')
+    implementation('org.javassist:javassist:3.24.1-GA')
+
+    runtimeOnly('mysql:mysql-connector-java')
+
+    implementation('io.springfox:springfox-swagger2:2.9.2')
+    implementation('io.springfox:springfox-swagger-ui:2.9.2')
+
+    implementation('org.apache.commons:commons-lang3')
+    implementation('org.apache.commons:commons-collections4:4.3')
+    implementation('com.google.code.gson:gson')
+    implementation('org.apache.httpcomponents:httpclient')
+    implementation('org.qlrm:qlrm:2.1.1')
+    implementation('org.codehaus.janino:janino')
+    implementation 'junit:junit:4.12'
 }
 
 test {
     useJUnitPlatform()
+}
+
+bootRun {
+    String activeProfile = System.properties['spring.profiles.active']
+    systemProperty "spring.profiles.active", activeProfile
 }
